--- a/openeuler_storage/pom.xml
+++ b/openeuler_storage/pom.xml
@@ -41,6 +41,10 @@
             <version>2.2.2.RELEASE</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
