--- a/openeuler_base/src/main/resources/application.yml
+++ b/openeuler_base/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 9001
 spring:
   application:
-    name: openeuler‐base #指定服务名
+    name: openeuler-base #指定服务名
   datasource:
     driverClassName: com.mysql.jdbc.Driver
     url: jdbc:mysql://101.32.203.164:3306/openeuler_base?characterEncoding=utf-8
@@ -10,5 +10,5 @@ spring:
     password: XIAObbMIAOx3HeiHeiHei
   jpa:
     database: MySQL
-    show‐sql: true
-    generate‐ddl: true
+    show-sql: true
+    generate-ddl: true
