--- a/openeuler_base/src/main/resources/application.yml
+++ b/openeuler_base/src/main/resources/application.yml
@@ -31,6 +31,6 @@ zuul:
       strip-prefix: false
     web:
       path: /**
-      url: http://localhost:9528
+      url: ${FRONTEND_URI:http://localhost:9528/}
 ribbon:
   ReadTimeout: 60000
