--- a/config.example.env
+++ b/config.example.env
@@ -12,3 +12,5 @@ S3_ENDPOINT=YOUR_S3_ENDPOINT
 S3_URL=YOUR_S3_URL
 S3_ACCESS_KEY=YOUR_S3_ACCESS_KEY
 S3_SECRET_KEY=YOUR_S3_SECRET_KEY
+
+MAVEN_SLS_URI=YOUR_SLS_SERVICE_URI
