--- a/config.example.env
+++ b/config.example.env
@@ -8,9 +8,11 @@ DB_BASE_NAME=openeuler
 
 S3_BUCKET=YOUR_S3_BUCKET
 S3_REGION=YOUR_S3_REGION
-S3_ENDPOINT=YOUR_S3_ENDPOINT
-S3_URL=YOUR_S3_URL
+S3_ENDPOINT=https://YOUR_S3_ENDPOINT
+S3_URL=https://YOUR_S3_URL
 S3_ACCESS_KEY=YOUR_S3_ACCESS_KEY
 S3_SECRET_KEY=YOUR_S3_SECRET_KEY
 
-MAVEN_SLS_URI=YOUR_SLS_SERVICE_URI
+MAVEN_SLS_URI=https://YOUR_SLS_SERVICE_URI
+
+API_BASE_URL=https://YOUR_SERVICE_URL
