--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -14,4 +14,4 @@ EXPOSE 80
 RUN echo http://mirrors.aliyun.com/alpine/v3.7/main/ >> /etc/apk/repositories
 RUN apk add --no-cache bash
 
-CMD ["/bin/bash", "-c", "sed -i \"s@<html@<html data-promise-base-url=\"$API_BASE_URL\"@\" /usr/share/nginx/html/index.html; nginx -g \"daemon off;\""]
+CMD ["/bin/bash", "-c", "sed -i \"s@<html@<html data-api-base-url=\"$API_BASE_URL\"@\" /usr/share/nginx/html/index.html; nginx -g \"daemon off;\""]
